# updater

./: .gitmodules  .travis.yml  AUTHORS  Application.cpp  Application.h  CMakeLists.txt  COPING  InstallChecker.cpp  InstallChecker.h  ProcessStarter.cpp  ProcessStarter.h  README.md  RELEASE-NOTES.md  RELEASE-NOTES.txt  ScheduledUpdateTask.cpp  ScheduledUpdateTask.h  appveyor.yml  idupdater.cpp  idupdater.h  idupdater.qrc  idupdater.rc  idupdater.ui  idupdater.wxs  idupdater_et.ts  idupdater_ru.ts  main.cpp  translations.qrc  vcpkg.json
.github/workflows/: build.yml
buildxml/: products.xml  query.wsf
mac/Resources/en.lproj/: InfoPlist.strings
prefPane/: AdvancedWindowController.swift  Icon.icns  Info.plist.cmake  id-updater-helper.m  id-updater-helper.swift  id-updater.m  id-updater.swift  main.swift  update.h  update.m  update.swift
prefPane/Base.lproj/: ID_updater.xib
prefPane/en.lproj/: ID_updater.strings  Localizable.strings
prefPane/et.lproj/: ID_updater.strings  InfoPlist.strings  Localizable.strings
prefPane/ru.lproj/: ID_updater.strings  Localizable.strings
